--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "4.0.3",
     "react-spring": "^9.2.4",
     "styled-components": "^5.3.0",
+    "typescript": "^4.4.3",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -40,6 +41,8 @@
     ]
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.31.1",
+    "@typescript-eslint/parser": "^4.31.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
